--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-cloud-storage==2.10.0
 google-cloud-datastore==2.20.1
 google-generativeai
 python-dotenv==1.0.0
+firebase-admin==6.0.0
 
 debugpy # Required for debugging.
