--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .env
 .gitignore
-# Ignore Firebase Admin SDK credentials
+.dockerignore
 photo-storage-82b4b-firebase-adminsdk-dp9ju-1aa3c84e5b.json
+.vscode
+.readmes
+.idea
